Make missionModelConfigPath an `Optional<Path>`